--- a/mahyong_game/templates/mahyong_game/base.html
+++ b/mahyong_game/templates/mahyong_game/base.html
@@ -12,10 +12,8 @@
     </head>
     <body>
         <!-- jQuery --!>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="{% static "mahyong_game/js/bootstrap.js" %}"></script>
         
-        <div class="nav navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -33,8 +31,10 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container-fluid">
         {% block content %}{% endblock %}
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="{% static "mahyong_game/js/bootstrap.js" %}"></script>
     </body>
 </html>
