--- a/mahyong_game/templates/mahyong_game/index.html
+++ b/mahyong_game/templates/mahyong_game/index.html
@@ -1,14 +1,16 @@
 {% extends "mahyong_game/base.html" %}
-{% block title %}Mahyong{% endblock %}
-
+{% block title %}Mahyong Homepage{% endblock %}
 {% block content %}
-{% if active_games %}
-    <ul>
-    {% for game in active_games %}
-        <li>{{ game }}</li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No games are available</p>
-{% endif %}
+<div class="row">
+    <div class="col-sm-3 col-ms-2 sidebar">
+        <ul class="nav nav-sidebar">
+            {% for game in active_games %}
+                <li>{{ game }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <h1 class="page-header">Dashboard</h1>
+    </div>
+</div>
 {% endblock %}
