Dashboard CSS added

--- a/mahyong_game/templates/mahyong_game/index.html
+++ b/mahyong_game/templates/mahyong_game/index.html
@@ -2,10 +2,10 @@
 {% block title %}Mahyong Homepage{% endblock %}
 {% block content %}
 <div class="row">
-    <div class="col-sm-3 col-ms-2 sidebar">
+    <div class="col-sm-3 col-md-2 sidebar">
         <ul class="nav nav-sidebar">
             {% for game in active_games %}
-                <li>{{ game }}</li>
+                <li><a href="#">{{ game }}</a></li>
             {% endfor %}
         </ul>
     </div>
