--- a/mahyong_game/templates/mahyong_game/base.html
+++ b/mahyong_game/templates/mahyong_game/base.html
@@ -9,10 +9,9 @@
         
         <!-- Bootstrap --!>
         <link href="{% static "mahyong_game/css/bootstrap.css"%}" rel="stylesheet">
+        <link href="{% static "mahyong_game/css/dashboard.css"%}" rel="stylesheet">
     </head>
     <body>
-        <!-- jQuery --!>
-        
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -34,6 +33,7 @@
         <div class="container-fluid">
         {% block content %}{% endblock %}
         </div>
+        <!-- jQuery --!>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="{% static "mahyong_game/js/bootstrap.js" %}"></script>
     </body>
