--- a/mahyong_game/templates/mahyong_game/base.html
+++ b/mahyong_game/templates/mahyong_game/base.html
@@ -8,7 +8,7 @@
         <title>{% block title %}{% endblock %}</title>
         
         <!-- Bootstrap --!>
-        <link href="{% static "mahyong_game/css/bootstrap.css"%}" rel="stylesheet">
+        <link href="{% static "mahyong_game/css/bootstrap.min.css"%}" rel="stylesheet">
         <link href="{% static "mahyong_game/css/dashboard.css"%}" rel="stylesheet">
     </head>
     <body>
@@ -35,6 +35,6 @@
         </div>
         <!-- jQuery --!>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="{% static "mahyong_game/js/bootstrap.js" %}"></script>
+        <script src="{% static "mahyong_game/js/bootstrap.min.js" %}"></script>
     </body>
 </html>
