--- a/mahyong_game/templates/mahyong_game/base.html
+++ b/mahyong_game/templates/mahyong_game/base.html
@@ -31,7 +31,14 @@
             </div>
         </div>
         <div class="container-fluid">
-        {% block content %}{% endblock %}
+		<div class="row">
+		    <div class="col-sm-3 col-md-2 sidebar">
+			{% include "mahyong_game/menu.html" %}
+		    </div>
+		    <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+			{% block content %}{% endblock %}
+		    </div>
+		</div>
         </div>
         <!-- jQuery --!>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
