--- a/mahyong_game/templates/mahyong_game/game_detail.html
+++ b/mahyong_game/templates/mahyong_game/game_detail.html
@@ -1,5 +1,5 @@
 {% extends "mahyong_game/base.html" %}
-{% block title %} {{ context.active.name }} {% endblock %}
+{% block title %} {{ game.name }} {% endblock %}
 {% block content %}
-<h1 class="page-header">{{ context.active.name }}</h1>
+<h1 class="page-header">{{ game.name }}</h1>
 {% endblock %}
