Separated Game and Player views

--- a/mahyong_game/templates/mahyong_game/base.html
+++ b/mahyong_game/templates/mahyong_game/base.html
@@ -21,11 +21,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Mahyong</a>
+                    <a class="navbar-brand" href="/">Mahyong</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Help</a></li>
+                        <li><a href="/game/">Spel</a></li>
+                        <li><a href="/player/">Speler</a></li>
                     </ul>
                 </div>
             </div>
