--- a/mahyong_game/templates/mahyong_game/game_index.html
+++ b/mahyong_game/templates/mahyong_game/game_index.html
@@ -1,5 +1,5 @@
 {% extends "mahyong_game/base.html" %}
 {% block title %}Mahyong Homepage{% endblock %}
 {% block content %}
-	<h1 class="page-header">Dashboard</h1>
+	<h1 class="page-header">Selecteer een spel uit het menu links</h1>
 {% endblock %}
