--- a/mahyong_game/templates/mahyong_game/menu.html
+++ b/mahyong_game/templates/mahyong_game/menu.html
@@ -1,5 +1,5 @@
 <ul class="nav nav-sidebar">
     {% for object in object_list %}
-        <li><a href="{{ object.link }}">{{ object }}</a></li>
+        <li {% if object.id == active_object %}class="active"{% endif %}><a href="{{ object.link }}">{{ object }}</a></li>
     {% endfor %}
 </ul>
