Finished field added to Game and count Games added to player

--- a/mahyong_game/templates/mahyong_game/game_detail.html
+++ b/mahyong_game/templates/mahyong_game/game_detail.html
@@ -2,4 +2,12 @@
 {% block title %} {{ game.name }} {% endblock %}
 {% block content %}
 <h1 class="page-header">{{ game.name }}</h1>
+<dl>
+    <dt>Gestart</dt>
+    <dd>{{ game.date_started }}</dd>
+{% if game.isFinished %}
+    <dt>Ge&euml;indigd</dt>
+    <dd>{{ game.finished }}</dd>
+{% endif %}
+</dl>
 {% endblock %}
