--- a/mahyong_game/templates/mahyong_game/player_detail.html
+++ b/mahyong_game/templates/mahyong_game/player_detail.html
@@ -2,4 +2,8 @@
 {% block title %} {{ player }} {% endblock %}
 {% block content %}
 <h1 class="page-header">{{ player }}</h1>
+<dl>
+    <dt>Gespeelde spellen</dt>
+    <dd>{{ player.count_games }}</dd>
+</dl>
 {% endblock %}
